REGRESSION(r74971): Can't select a line of RTL text on Facebook https://bugs.webkit.org/show_bug.cgi?id=59435

Reviewed by Eric Seidel.

Source/WebCore:

The bug was caused by inline text boxes created by BRs being placed at the end of the line
according to the block's direction regardless of its unicode bidi-level. e.g. if we have
<div dir="rtl"><span dir="ltr">hello<br>world</span></div>
the inline box generated by the br has the bidi-level of 2 like the rest of text in the span.
This inline text box gives an illusion of having text on the left of "hello" to hit testing
and editing code and causes all sorts of problems.

Fixed the bug by replacing calls to nextLeafChild and prevLeafChild by newly introduced
nextLeafChildIgnoringLineBreak and prevLeafChildIgnoringLineBreak. These two functions will
return 0 when they hit the end of a line or inline text box that's a line break. In effect,
hit testing and editing code can ignore inline boxes generated by br's.

In the long term, we should move these two functions into RenderedPosition along with the rest
of code that converts a Position and an inline box, offset pair.

Test: editing/selection/select-line-break-with-opposite-directionality.html

* dom/Position.cpp:
(WebCore::Position::getInlineBoxAndOffset):
* editing/RenderedPosition.cpp:
(WebCore::RenderedPosition::prevLeafChild):
(WebCore::RenderedPosition::nextLeafChild):
* rendering/InlineBox.cpp:
(WebCore::InlineBox::nextLeafChildIgnoringLineBreak):
(WebCore::InlineBox::prevLeafChildIgnoringLineBreak):
* rendering/InlineBox.h:
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::positionForPointWithInlineChildren):
* rendering/RenderText.cpp:
(WebCore::lineDirectionPointFitsInBox): If we're on the left of a RTL line, we should stay at
upstream position since we're at the end of a line.
(WebCore::createVisiblePositionAfterAdjustingOffsetForBiDi): Merge the two special cases into
the general loop as the comment suggests. Skip an inline text box for a line break at the left
edge when there are more line boxes on the line.
(WebCore::RenderText::positionForPoint):
* rendering/RootInlineBox.cpp:
(WebCore::RootInlineBox::closestLeafChildForLogicalLeftPosition): Ignore line boxes created for
line boxes when there are other boxes on the line.

LayoutTests:

Add a regression test for selecting  multiline bidirectional text.

* editing/selection/select-line-break-with-opposite-directionality-expected.txt: Added.
* editing/selection/select-line-break-with-opposite-directionality.html: Added.


Canonical link: https://commits.webkit.org/97268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109593 268f45cc-cd09-0410-ab3c-d52691b4dbfc